tenant bazli yarim yapildi subdomain ile